--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ body {
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
-	text-align: left;
+	text-align: center;
 	font: bold 16px sans-serif;
 	padding: 10px 50px;
 }
@@ -232,9 +232,9 @@ body {
 }
 
 .footer-distributed .footer-links a:before {
-  content: "|";
+  content: "|  ";
   font-weight:300;
-  font-size: 20px;
+  font-size: 16px;
   left: 0;
   color: #fff;
   width: 100%;
