--- a/css/styles.css
+++ b/css/styles.css
@@ -136,20 +136,17 @@ body {
 .footer-right img {
   width: 150px;  
   height: 150px;  
-  margin-left: 100px;  
 }
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
 .footer-distributed .footer-right{
 	display: inline-block;
-	vertical-align: top;
-
 }
 
 /* Footer left */
 
 .footer-distributed .footer-left{
-	width: 40%;
+	width: 30%;
 }
 
 /* The company logo */
@@ -181,7 +178,7 @@ body {
 }
 
 .footer-distributed .footer-company-name{
-	color:  #222;
+	color:  #fff;
 	font-size: 14px;
 	font-weight: normal;
 	margin: 0;
@@ -190,20 +187,19 @@ body {
 /* Footer Center */
 
 .footer-distributed .footer-center{
-	width: 35%;
+	width: 30%;
+  text-align: left;
 }
 
 .footer-distributed .footer-center i{
 	background-color:  #33383b;
 	color: #ffffff;
-	font-size: 25px;
-	width: 38px;
-	height: 38px;
+	font-size: 15px;
 	border-radius: 50%;
 	text-align: center;
 	line-height: 42px;
-	margin: 10px 15px;
 	vertical-align: middle;
+  display: inline-block;
 }
 
 .footer-distributed .footer-center i.fa-envelope{
@@ -213,16 +209,17 @@ body {
 
 .footer-distributed .footer-center p{
 	display: inline-block;
+  width: 70%;
 	color: #ffffff;
   font-weight:400;
 	vertical-align: middle;
 	margin:0;
+  text-align: left;
 }
 
 .footer-distributed .footer-center p span{
 	display:block;
 	font-weight: normal;
-	font-size:14px;
 	line-height:2;
 }
 
@@ -248,7 +245,7 @@ body {
 /* Footer Right */
 
 .footer-distributed .footer-right{
-	width: 20%;
+	width: 10%;
 }
 
 .footer-distributed .footer-company-about{
@@ -309,6 +306,15 @@ body {
 		margin-left: 0;
 	}
 
+  .footer-distributed .footer-center p{
+    display: inline-block;
+    width: 50%;
+    color: #ffffff;
+    font-weight:400;
+    vertical-align: middle;
+    margin:0;
+  }
+
 }
 
 
@@ -319,7 +325,7 @@ body {
 
   footer,
   footer p {
-    font-size: 6px;
+    font-size: 10px;
   }
 }
 
@@ -564,10 +570,10 @@ figure {
   margin: 0 0 1rem;
 }
 
-img,
+/* img,
 svg {
   vertical-align: middle;
-}
+} */
 
 table {
   caption-side: bottom;
@@ -4505,7 +4511,7 @@ fieldset:disabled .btn {
   --bs-navbar-brand-hover-color: rgba(0, 0, 0, 0.9);
   --bs-navbar-nav-link-padding-x: 0.5rem;
   --bs-navbar-toggler-padding-y: 0.25rem;
-  --bs-navbar-toggler-padding-x: 0.75rem;
+  --bs-navbar-toggler-padding-x: 0.5rem;
   --bs-navbar-toggler-font-size: 1.25rem;
   --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   --bs-navbar-toggler-border-color: rgba(0, 0, 0, 0.1);
@@ -4619,7 +4625,7 @@ fieldset:disabled .btn {
 .navbar-toggler-icon {
   display: inline-block;
   width: 1.5em;
-  height: 1.5em;
+  height: 1em;
   vertical-align: middle;
   background-image: var(--bs-navbar-toggler-icon-bg);
   background-repeat: no-repeat;
@@ -12855,7 +12861,7 @@ body {
 }
 
 .page-section {
-  padding: 8rem 0;
+  padding: 2rem 0;
 }
 
 .text-white-75 {
@@ -12899,7 +12905,7 @@ hr.divider-light {
   color: #6c757d;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
-  font-size: 0.9rem;
+  font-size: 1rem;
   padding: 0.75rem 0;
 }
 
@@ -13073,54 +13079,8 @@ header.masthead .h1 {
   opacity: 1;
 }
 
-
-/*contact css*/
-
-@media screen and (max-width: 768px) { /* 화면의 너비가 768px 이하일 때 적용 */
-  .contact-title {
-    margin: 50px 15px 0px 15px; /* 화면 크기에 맞게 마진 값을 조정 */
-  }
-}
-
-body#contact {
-  background-color: #000;
-  /* 원하는 배경색으로 변경 */
-  padding-bottom: 100px;
-
-}
-
-.contact-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: left;
-  width: fit-content;
-  margin: auto;
-  color: white;
-}
-
-.contact-info p {
-  width: 100%;
-}
-
-#map {
-  height: 400px;
-  width: 90%;
-  margin: 100px auto 100px
-}
-
-@media (min-width: 768px) {
-  #map {
-    width: 50%;
-    position: relative;
-    z-index: 1;
-    background-color: rgba(255, 255, 255, 0.5);
-  }
-}
-
 footer {
-  /*position: fixed;*/
-  bottom: 0;
+  flex-shrink: 0;
   width: 100%;
   /* 기존 스타일 유지 */
 }
