--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,13 @@ body {
 }
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,500,300,700);
 
+footer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .footer-container,
 .footer-color {
   width: 100%;
@@ -245,7 +252,7 @@ body {
 /* Footer Right */
 
 .footer-distributed .footer-right{
-	width: 10%;
+	width: 20%;
 }
 
 .footer-distributed .footer-company-about{
