--- a/css/member.css
+++ b/css/member.css
@@ -1,3 +1,13 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.wrapper {
+    flex: 1;
+}
+
 .member__img {
     margin-top: 72px;
     position: relative;
