--- a/css/styles.css
+++ b/css/styles.css
@@ -12858,8 +12858,10 @@ html {
 }
 
 body {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  background-color: black;
 }
 
 .page-section {
@@ -13081,10 +13083,15 @@ header.masthead .h1 {
   opacity: 1;
 }
 
-footer {
-  flex-shrink: 0;
-  width: 100%;
-  /* 기존 스타일 유지 */
+.wrapper {
+  margin-top: 1rem;
+  flex: 1;
+}
+
+@media (min-width: 992px) {
+  .wrapper {
+    margin-top: 0;
+  }
 }
 
 /*tech css*/
