--- a/css/member.css
+++ b/css/member.css
@@ -1,11 +1,5 @@
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
-.wrapper {
-    flex: 1;
+    background-color: white;
 }
 
 .member__img {
