--- a/css/publication.css
+++ b/css/publication.css
@@ -46,6 +46,37 @@
     color: inherit;
 }
 
+/* navbar of content */
+.grid_year {
+    display: grid;
+    grid-column-gap: 2em;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 1.414em 0;
+    padding: 0;
+    font-size: 15px;
+    list-style: none;
+}
+
+@media (min-width: 992px) {
+    .grid_year {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.grid_year a {
+    display: flex;
+    padding: 0.25em 0;
+    justify-content: space-between;
+    text-decoration: none;
+    border-bottom: 1px solid #bfbfbf;
+    color: black;
+}
+
+.count{
+    color: gray;
+}
+
+
 /* content of publication */
 
 @media (max-width: 992px) {
