--- a/css/tech.css
+++ b/css/tech.css
@@ -206,8 +206,8 @@
     color: white;
 }
 
-@media only screen and (max-width: 480px) {
-  .slide_item {
-    height: 200px;
+@media only screen and (max-width: 768px) {
+  .slide_item img {
+    object-fit: contain;
   }
 }
