--- a/css/tech.css
+++ b/css/tech.css
@@ -60,7 +60,7 @@
     position: relative;
   
     /* size */
-    width: 50%;  /* 넓이를 50%로 변경합니다. */
+    width: 55%;  /* 넓이를 50%로 변경합니다. */
     margin: 0 auto;  /* 좌우 자동 마진을 적용하여 중앙에 배치합니다. */
 
       /* other styles */
@@ -91,13 +91,6 @@
     /* transition */
     transition: left 0.15s;
   }
-  .slide_item img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;  
-  }
-
   .slide_button {
     /* layout */
     display: flex;
@@ -131,10 +124,10 @@
     
     /* size */
     width: 100%;
-    height: 100%;
+    height: auto;
     
     /* cover the slide item */
-    object-fit: cover;
+    object-fit: contain;
   }
   /* 각 슬라이드가 변경되는 것을 시각적으로 확인하기 쉽도록 각 슬라이드별 색상 적용 */
   .slide_item.item1 {
