--- a/css/tech.css
+++ b/css/tech.css
@@ -71,7 +71,6 @@
     user-select: none;
   }
 
-
   .slide_item {
     /* layout */
     display: flex;
@@ -91,44 +90,55 @@
     /* transition */
     transition: left 0.15s;
   }
-  .slide_button {
-    /* layout */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    /* position */
-    position: absolute;
-    /* 버튼이 중앙에 위치하게 하기위해 계산 */
-    top: calc(50% - 16px);
-  
-    /* size */
-    width: 32px;
-    height: 32px;
-  
-    /* style */
-    border-radius: 100%;
-    background-color: #cccc;
-    cursor: pointer;
-  }
-  
-  .slide_prev_button {
-    left: 5px;
-  }
-  .slide_next_button {
-    right:7px;
-  }
   .slide_item img {
     /* layout */
-    display: block;
-    
     /* size */
-    width: 100%;
-    height: auto;
+    width: 100%;  /* 이미지의 너비를 부모 요소의 너비에 맞게 조절 */
+    height: auto;  /* 이미지의 높이를 부모 요소의 높이에 맞게 조절 */
     
     /* cover the slide item */
-    object-fit: contain;
+    object-fit: cover;  /* 이미지의 비율을 유지하면서 부모 요소를 모두 채우도록 설정 */
+}
+
+
+
+  section {
+    position: relative; /* 상대 위치 설정 */
+}
+
+
+
+.slide_button {
+  height: auto; /* 이미지의 높이를 auto로 설정하여 비율을 유지 */
+  width: 100%;
+  padding-bottom: 10px; /* 하단 패딩 추가 */
+}
+
+.slide_buttons {
+  position: absolute; 
+  left: 10vw; /* 상위 요소의 너비의 10% 만큼 왼쪽으로 이동 */
+  width: 12%;
+  bottom: 60px; /* 하단으로부터 20픽셀 위에 위치 */
+}
+
+.slide_buttons > img {
+  /* style */
+  width: 100%; /* 이미지의 너비를 부모 요소의 너비에 맞게 조절 */
+  height: 100%; /* 이미지의 높이를 auto로 설정하여 비율을 유지 */
+  cursor: pointer;
+  object-fit: cover; /* 이미지의 비율을 유지하면서 부모 요소에 맞게 조절 */
+}
+
+/* 화면 크기가 768px 이하일 때 */
+@media (max-width: 768px) {
+  .slide_buttons {
+      bottom: -15px; /* 하단으로부터 80픽셀 위에 위치 */
+    
   }
+}
+
+
+
   /* 각 슬라이드가 변경되는 것을 시각적으로 확인하기 쉽도록 각 슬라이드별 색상 적용 */
   .slide_item.item1 {
     background-color:unset;
@@ -160,10 +170,11 @@
   
     /* position */
     position: absolute;
-    bottom: 0;
+    top: 90%; /* 수정된 부분 */
     /* left:50%, translateX(-50%)를 하면 가로 가운데로 위치시킬 수 있다. */
     left: 50%;
     transform: translateX(-50%);
+    margin-top: 2px; /* 추가된 부분 */
   }
   .slide_pagination > li {
     /* 현재 슬라이드가 아닌 것은 투명도 부여 */
@@ -173,7 +184,7 @@
   }
   .slide_pagination > li.active {
     /* 현재 슬라이드 색상은 투명도 없이 */
-    color: #7fb5ff;
+    color: #7fb5ff;margin-top:2 px; /* 추가된 부분 */
   }
   
   .slide_item_duplicate {
