--- a/css/member.css
+++ b/css/member.css
@@ -6,12 +6,6 @@ body {
     position: relative;
 }
 
-.member__img img {
-    width: 100%;
-    height: 20vw;
-    object-fit: cover;
-}
-
 .member__img .content {
     position: absolute;
     top: 50%;
@@ -31,21 +25,34 @@ body {
     text-align: center;
 }
 
+.member__content h4 {
+    color: black;
+    font-weight: bolder;
+    margin-bottom: 1rem;
+}
+
 .jb-division-line {
     border-top: 3px solid #444444;
     margin: 30px auto 100px;
 }
 
 .member__content img {
-    width: 20vw;
-    height: 20vw;
+    width: 30vw;
     object-fit: cover;
-    border-radius: 10%;
-    border: 1px solid black;
+    border-radius: 25px 25px 0% 0%;
     max-width: 300px;
     max-height: 300px;
 }
 
-h5 {
+.card {
+    border: none;
+    border-radius: 25px 25px 25px 25px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.card .content{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
     color: grey;
 }
