--- a/css/member.css
+++ b/css/member.css
@@ -6,6 +6,12 @@ body {
     position: relative;
 }
 
+.member__img img {
+    width: 100%;
+    height: 20vw;
+    object-fit: cover;
+}
+
 .member__img .content {
     position: absolute;
     top: 50%;
